# gutentag_world_python

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
gutentag_world/: __init__.py
src/gutentag_world/: __init__.py  example.py  say_hello.py
tests/: test_say_hello.py
